--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div id="scroll-wrapper">
         <canvas id="particle-canvas"></canvas>
 
+        <!-- Central ambient glow -->
+        <div id="central-glow"></div>
+
         <div class="visual-canvas">
             <div class="visual-wrapper" id="master-stage">
 
@@ -58,16 +61,16 @@
                     <!-- 5. Business Building (Corporate Collection) -->
                     <g id="building-group" class="narrative-element">
                         <!-- Left Tower -->
-                        <path class="building-outline" d="M250,600 L250,350 L350,350 L350,600 Z" />
+                        <path class="building-outline" d="M350,600 L350,400 L420,400 L420,600 Z" />
                         <!-- Center Tower (Tallest) -->
-                        <path class="building-outline" d="M400,600 L400,250 L550,250 L550,600 Z" />
+                        <path class="building-outline" d="M450,600 L450,320 L570,320 L570,600 Z" />
                         <!-- Right Tower -->
-                        <path class="building-outline" d="M600,600 L600,400 L750,400 L750,600 Z" />
+                        <path class="building-outline" d="M600,600 L600,420 L700,420 L700,600 Z" />
                         <g id="building-windows"></g>
                     </g>
 
                     <!-- 5. Scanner Beam -->
-                    <rect id="scanner-beam" x="0" y="0" width="1000" height="10" class="scanner-line" />
+                    <rect id="scanner-beam" x="330" y="0" width="390" height="10" class="scanner-line" />
 
                     <!-- 6. Generated Reports/Dashboards -->
                     <g id="report-group" class="narrative-element" opacity="0">
@@ -100,35 +103,41 @@
         <main class="story-content">
             <section class="story-section" id="section-1">
                 <div class="story-text">
-                    <h1>The Foundation.</h1>
-                    <p>It starts with core AI potential—a solid base for transformation.</p>
+                    <h1>It starts with AI.</h1>
+                    <p>The foundation. A single point that begins to reach out.</p>
                 </div>
             </section>
             <section class="story-section" id="section-2">
                 <div class="story-text">
-                    <h1>Unchecked Growth.</h1>
-                    <p>Raw potential expands rapidly, but without structure, it creates chaos.</p>
+                    <h1>Then it spreads.</h1>
+                    <p>Everywhere. Healthcare, finance, operations. Scattered. Disconnected. Chaos.</p>
                 </div>
             </section>
             <section class="story-section" id="section-3">
                 <div class="story-text">
-                    <h1>The Structure.</h1>
-                    <p>We align the mess into a structured grid—the reliable engine of business logic.</p>
+                    <h1>Until it's organized.</h1>
+                    <p>By people who understand patterns. Who can structure chaos into systems.</p>
                 </div>
             </section>
             <section class="story-section" id="section-4">
                 <div class="story-text">
-                    <h1>The Agent.</h1>
-                    <p>Intelligence takes form as a master director, ready to masters your enterprise AI.</p>
+                    <h1>We bring the intelligence.</h1>
+                    <p>People who don't just use AI—but shape it with experience and context.</p>
                 </div>
             </section>
             <section class="story-section" id="section-5">
                 <div class="story-text">
-                    <h1>The Value.</h1>
-                    <p>Meaningful insights and workflows delivered at pace.</p>
+                    <h1>We scan deeper.</h1>
+                    <p>Understanding clients layer by layer. Seeing what others miss.</p>
                 </div>
             </section>
             <section class="story-section" id="section-6">
+                <div class="story-text">
+                    <h1>Then we build.</h1>
+                    <p>Data. Insights. Solutions. Built by people who fundamentally get AI.</p>
+                </div>
+            </section>
+            <section class="story-section" id="section-7">
                 <!-- Blank section for the final logo transition -->
             </section>
         </main>
